<?xml version="1.0"?>
<package format="2">
    <name>fix2nmea</name>
    <version>1.0.0</version>
    <description>
        ROS node to transform sensor_msgs/NavSatFix into nmea_msgs/Sentence.
    </description>
    <author>Rik Bähnemann</author>
    <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>nmea_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>nmea_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

</package>